<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:baselineAligned="false"
    android:measureWithLargestChild="false"
    android:orientation="vertical"
    android:weightSum="10" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp"
        android:layout_weight="3" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignWithParentIfMissing="false"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/logo_desprition"
            android:scaleType="fitCenter"
            android:src="@drawable/logo" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_weight="6"
        android:background="@drawable/login_background_bg"
        android:padding="15dp"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <!-- 账号 -->

                <TextView
                    style="@style/normalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/login_user_name_label" />

                <EditText
                    android:id="@+id/login_user_name_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_user_name_hint"
                    android:inputType="text"
                    android:singleLine="true" >

                    <requestFocus />
                </EditText>
                <!-- 密码 text -->

                <TextView
                    style="@style/normalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/login_label_password" />

                <EditText
                    android:id="@+id/login_password_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:singleLine="true" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="3" >

                    <!-- 登录button -->

                    <CheckBox
                        android:id="@+id/login_remeber_me_checkbox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="0dp"
                        android:layout_weight="2"
                        android:text="记住我" >
                    </CheckBox>

                    <Button
                        android:id="@+id/login_btn"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_weight="1"
                        android:background="@drawable/selector_ok_cancel"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:text="@string/login_str" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/login_forget_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_forget_password_str"
            android:textColor="#000"
            android:textColorLink="#FF0066CC" />

        <TextView
            android:id="@+id/copyright_text"
            style="@style/normalText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:text="@string/copyright_str" >

            <requestFocus />
        </TextView>
    </RelativeLayout>

</LinearLayout>